--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
-discord
-py-cord
-python-dotenv
-asyncio
-typing
-aiohttp
-discord-pretty-help
+aiohttp==3.7.4.post0
+async-timeout==3.0.1
+asyncio==3.4.3
+asynctest==0.13.0
+Babel==2.5.1
+decorator==4.2.1
+discord==1.7.3
+discord-pretty-help==1.3.3
+discord.py==1.7.3
+prettytable==0.7.2
+py-cord==1.7.3
+requests==2.20.0
+setuptools==39.2.0
+TenGiphPy==2.5.0
+typing==3.7.4.3
+typing-extensions==4.0.1
