--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ asynctest==0.13.0
 Babel==2.5.1
 decorator==4.2.1
 discord==1.7.3
-discord-pretty-help==1.3.3
+discord-pretty-usage==1.3.3
 discord.py==1.7.3
 prettytable==0.7.2
 py-cord==1.7.3
