--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,5 @@
-aiohttp
-async-timeout
-asyncio
-asynctest
-Babel
-decorator
-discord
-prettytable
-requests
-setuptools
-TenGiphPy
-typing
-typing-extensions
-python-dotenv
-pychalk
+aiohttp==3.7.4.post0
+discord.py==1.7.3
+pychalk==2.0.1
+python-dotenv==0.19.2
+TenGiphPy==2.5.0
